src/objects/Story__c.object
<CustomObject>
    <fields>
        <fullName>Actual_LOE__c</fullName>
        <label>Actual LOE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assumptions__c</fullName>
        <label>Assumptions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Dev_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dev Owner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Dev Owner</relationshipLabel>
        <relationshipName>StoryDevOwner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Estimated_LOE__c</fullName>
        <label>Estimated LOE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Close_Date__c</fullName>
        <label>Expected Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>P1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P4</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <formula>Sprint__r.Release__r.Project__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QA_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>QA Owner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>QA Owner</relationshipLabel>
        <relationshipName>StoryQAOwner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <label>Severity</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sprint__c</fullName>
        <label>Sprint</label>
        <referenceTo>Sprint__c</referenceTo>
        <relationshipLabel>Stories</relationshipLabel>
        <relationshipName>Stories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status_Notes__c</fullName>
        <label>Status Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Planned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dev Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QA Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Story_Number__c</fullName>
        <displayFormat>ST-{000000}</displayFormat>
        <label>Story Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Story_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Story Owner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Story Owner</relationshipLabel>
        <relationshipName>Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Story</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Story_Number__c</columns>
        <columns>Sprint__c</columns>
        <columns>Status__c</columns>
        <columns>Status_Notes__c</columns>
        <columns>Priority__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>X401K_Sprint_1</fullName>
        <columns>NAME</columns>
        <columns>Story_Number__c</columns>
        <columns>Status__c</columns>
        <columns>Status_Notes__c</columns>
        <columns>Estimated_LOE__c</columns>
        <columns>Priority__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project__c</field>
            <operation>contains</operation>
            <value>401K Generation Case Management</value>
        </filters>
        <label>401K Sprint 1</label>
    </listViews>
    <nameField>
        <label>Story Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>